Feature: RESTClient Implementation Started

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,41 @@
-spring.application.name=client
-server.port=8090
+# Server API Configuration
+api.base.url=http://localhost:8080
+api.timeout=30
+
+# Security Configuration
+security.token.header=Authorization
+security.token.prefix=Bearer
+security.token.expiration=86400000
+
+# Logging Configuration
+logging.level.com.misight.client=DEBUG
+logging.level.org.springframework.web.client.RestTemplate=DEBUG
+
+# Connection Pool Settings
+http.client.max-total-connections=100
+http.client.default-max-per-route=20
+http.client.connection-timeout=5000
+http.client.socket-timeout=30000
+
+# Cache Configuration
+spring.cache.type=caffeine
+spring.cache.cache-names=users,mines,minerals
+spring.cache.caffeine.spec=maximumSize=500,expireAfterAccess=600s
+
+# Client UI Configuration
+ui.theme=light
+ui.language=en
+ui.dateFormat=yyyy-MM-dd
+ui.timeFormat=HH:mm:ss
+
+# Error Handling
+client.error.include-stacktrace=never
+client.error.include-message=always
+
+# Development Tools
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=true
+
+# Debugging
+debug=true
+trace=false
