ENHANCEMENT - CLI Implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,10 +32,12 @@ ui.timeFormat=HH:mm:ss
 client.error.include-stacktrace=never
 client.error.include-message=always
 
-# Development Tools
-spring.devtools.restart.enabled=true
-spring.devtools.livereload.enabled=true
+# Database Configuration (Optional for Client, remove if unused in client side)
+spring.datasource.url=jdbc:postgresql://localhost:5432/misight_db
+spring.datasource.username=postgres
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
-# Debugging
-debug=true
-trace=false
